--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/chetans3006/namaste-react"
   },
   "keywords": [],
-  "author": "Akshay Saini",
+  "author": "Chetan Sharma",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chetans3006/namaste-react/issues"
